@@ -9,7 +9,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -34,7 +33,7 @@ class BottleBeerPerformerTest {
     @BeforeEach
     public void setUp() {
 
-        List<Validator<BottleBeerData>> bottleBeerValidator = Collections.singletonList(
+        List<Validator<BottleBeerData>> bottleBeerValidator = List.of(
                 (Validator<BottleBeerData>) Mockito.mock(Validator.class)
         );
 
